--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,14 +12,17 @@
     "apollo-server-express": "^3.3.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.3",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.37"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.13",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
