--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,13 +18,15 @@
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.37"
+    "typeorm": "^0.2.37",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.13",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "eslint": "^7.32.0",
