--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,8 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start:dev": "NODE_ENV=development ts-node-dev -r tsconfig-paths/register src/index.ts | pino-pretty",
-    "test:setup": "ts-node -r tsconfig-paths/register src/utils/setupTests.ts",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test ts-node -r tsconfig-paths/register tests/index.ts"
   },
   "dependencies": {
     "apollo-server-express": "^3.3.0",
@@ -18,6 +17,7 @@
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
+    "typedi": "^0.10.0",
     "typeorm": "^0.2.37",
     "winston": "^3.3.3"
   },
@@ -25,6 +25,7 @@
     "@types/compression": "^1.7.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
@@ -33,7 +34,10 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^4.0.0",
+    "faker": "^5.5.3",
+    "jest": "^27.1.1",
     "prettier": "^2.3.2",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.11.0",
