--- a/packages/server/.env.development
+++ b/packages/server/.env.development
@@ -1,5 +1,8 @@
 PORT=5000
 
+REFRESH_TOKEN_SECRET=reddit-clone-refresh-token
+ACCESS_TOKEN_SECRET=reddit-clone-access-token
+
 TYPEORM_TYPE=postgres
 TYPEORM_HOST=localhost
 TYPEORM_DATABASE=reddit
