--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,10 @@ services:
       - '5500:5432'
     volumes:
       - ./db:/var/lib/postgresql/data
+  redis:
+    image: redis:6.0.5
+    container_name: redis-cache
+    hostname: redis6379
+    command: redis-server --port 6379
+    ports:
+      - '6379:6379'
