feat(server): Add redis to typeorm cache option

--- a/packages/server/.env.development
+++ b/packages/server/.env.development
@@ -12,3 +12,6 @@ TYPEORM_PORT=5500
 TYPEORM_DROPSCHEMA=false
 TYPEORM_SYNCRONIZE=true
 TYPEORM_LOGGING=true
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
