--- a/package.json
+++ b/package.json
@@ -4,5 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "private": "true",
-  "workspaces": ["packages/**/*"]
+  "workspaces": [
+    "packages/**/*"
+  ],
+  "scripts": {
+    "postinstall": "patch-package"
+  },
+  "devDependencies": {
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0"
+  }
 }
